--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Daniel Amarante",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "body-parser": "^1.20.2",
     "consign": "^0.1.6",
     "express": "^4.18.2",
+    "express-validator": "^5.1.2",
     "nedb": "^1.8.0"
   }
 }
